--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="style/stylemobile.css" media="screen and (min-width: 375px) and (max-width: 768px)">
-    <title>Document</title>
+    <title>Blog preview card</title>
 </head>
 <body>
     <main>
         <article>
             <div id="div1">
-                <img id="imgcenter" src="/images/illustration-article.svg" alt="image">
+                <img id="imgcenter" src="images/illustration-article.svg" alt="image">
             </div>
             <button>Learning</button>
             <p id="dec">Published 21 Dec 2023</p>
