--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="style/stylemobile.css" media="screen and (min-width: 375px) and (max-width: 768px)">
+    <link rel="shortcut icon" href="images/favicon-32x32.png" type="image/x-icon">
+    
     <title>Blog preview card</title>
 </head>
 <body>
